# sparkhelp-agentic-system

./: README.md  example.env  handoff_orchestration.py  orchestration.py  process_specific_agent.py  pyproject.toml  requirements.txt  test.py
agent_plugins_verse/agent_email_plugin/: plugin.py
agent_plugins_verse/agent_plugin_calculator/: server.py
agent_plugins_verse/agent_plugin_retriever/: server.py
agent_verse/Composer_Agent/: agent.py
agent_verse/Composer_Agent/prompt/prompt_library/: SystemBasePrompt.txt
agent_verse/Retriever_Agent/: agent.py
agent_verse/Retriever_Agent/logs/: agent.log.2025-08-16
agent_verse/Retriever_Agent/prompt/prompt_library/: SystemBasePrompt.txt
agent_verse/Triage_Agent/: agent.py
agent_verse/Triage_Agent/logs/: agent.log.2025-08-16  agent.log.2025-08-17
agent_verse/Triage_Agent/prompt/: prompt_factory.py
agent_verse/Triage_Agent/prompt/prompt_library/: SystemBasePrompt.txt
agent_verse/calculator_agent/: agent.py
agent_verse/calculator_agent/logs/: agent.log.2025-08-03  agent.log.2025-08-04
ai_model/: agent_llm_factory.py
config/: credential_manager.py  llm_config.json  plugin_config.json
logs/: agent.log.2025-08-17  agent.log.2025-08-20  agent.log.2025-08-23
utils/: logger.py  metrics.py
